# qqmail-rmcp

./: .env.example  AGENTS.md  Cargo.toml  README.md  justfile
config/: qqmail.yaml.example
docs/: mvp-architecture.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
just/: just.md  qqmail-macos-service.sh
src/: config.rs  error.rs  main.rs  mcp.rs
src/mail/: backend.rs  imap.rs  mod.rs  oauth.rs  providers.rs  smtp.rs
tests/: imap_regression.sh  oauth_provider_acceptance.sh
