[package]
name = "qqmail-rmcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.8", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "schemars",
] }
axum = "0.8"
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "builder",
    "smtp-transport",
    "tokio1-rustls-tls",
] }
imap = "1"
mail-parser = "0.9"
mailparse = "0.16"
dotenvy = "0.15"
thiserror = "2"
http = "1"
native-tls = "0.2"
